# openllm-agent-synth

./: .env.example  .gitignore  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml
.data-designer-home/: model_configs.yaml  model_providers.yaml
artifacts/: agent_trajectory_preview.json
docs/: index.md  installation.md  usage.md
examples/: agent_trajectory.yaml  skill_query.yaml
src/openllm_agent_synth/: __init__.py  __main__.py  cli.py  openllm_agent_synth.py  utils.py
src/openllm_agent_synth/config/: __init__.py  loader.py  models.py
src/openllm_agent_synth/datasets/: __init__.py  agent_trajectory.py  base.py  registry.py  skill_query.py
src/openllm_agent_synth/services/: __init__.py  builder_service.py  runner.py
tests/: __init__.py  test_config_and_builders.py  test_openllm_agent_synth.py  test_runner_and_cli.py
